--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mongoose-uuid",
-  "version": "1.0.0",
+  "name": "mongooseodm-uuid",
+  "version": "1.1.1",
   "description": "A Custom Mongoose UUID SchemaType, to use for MongoDB Binary UUIDs",
-  "main": "build/src/index.js",
+  "main": "./build/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test/example.test.js"
   },
   "repository": {
     "type": "git",
@@ -19,21 +19,20 @@
     "Binary",
     "UUID"
   ],
-  "author": "Max (https://github.com/gmax9803)",
+  "author": "Max (https://github.com/gmax9803) (gmax@fourthfruit.com)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/gmax9803/mongoose-uuid/issues"
   },
   "homepage": "https://github.com/gmax9803/mongoose-uuid#readme",
   "dependencies": {
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.24"
+  },
+  "devDependencies": {
     "@types/mongodb": "^3.5.25",
     "@types/mongoose": "^5.7.32",
     "@types/uuid": "^8.0.0",
-    "mongodb": "^3.5.9",
-    "mongoose": "^5.9.24",
-    "uuid": "^8.2.0"
-  },
-  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^7.4.0",
